@@ -23,8 +23,9 @@ Upgrading from v3.0.x
 
 Upgrading from v3.0.5
 ---------------------
-- constructUrl() now encodes & into &amp; by default.
 - TRepeater does not render <span> anymore for empty item template.
+- constructUrl() now encodes ampersand by default. This should have minimal
+  impact on any existing PRADO applications, though.
 
 Upgrading from v3.0.4
 ---------------------
