@@ -1,25 +1,25 @@
 <?php
 
-class SearchBox extends TTemplateControl 
+class SearchBox extends TTemplateControl
 {
-	public function getText() 
+	public function getText()
 	{
         $this->ensureChildControls();
         return $this->getRegisteredObject('search')->getText();
     }
-    
+
     public function getTextBox()
     {
         $this->ensureChildControls();
         return $this->getRegisteredObject('search');
     }
-	
+
 	public function getButton()
 	{
 		$this->ensureChildControls();
         return $this->getRegisteredObject('find');
 	}
-	
+
 	public function onInit($param)
 	{
 		parent::onInit($param);
@@ -32,7 +32,7 @@ class SearchBox extends TTemplateControl
 		if(strlen($query = $this->search->getText()) >0)
 		{
 			$ps = $this->getApplication()->getPageService();
-			$page = $ps->constructUrl('Search', array('q' => $query));			
+			$page = $ps->constructUrl('Search', array('q' => $query), false);
 			$this->getApplication()->getResponse()->redirect($page);
 		}
 	}
