@@ -19,7 +19,7 @@ To populate data into the repeater items, set <tt>DataSource</tt> to a valid dat
 </p>
 <com:TTextHighlighter Language="php" CssClass="source">
 class MyPage extends TPage {
-    protected function onLoad($param) {
+    public function onLoad($param) {
         parent::onLoad($param);
         if(!$this->IsPostBack) {
             $this->Repeater->DataSource=$data;
