@@ -1,0 +1,3 @@
+<com:TContent ID="Content">
+<com:System.I18N.TDateFormat Value="-19200000000" />
+</com:TContent>
