@@ -19,9 +19,11 @@ Version 3.0.6 December 4, 2006
 ==============================
 BUG: Ticket#442 - TPageService getBasePath in namespace form (Qiang)
 BUG: TTableCell should render &nbsp; only when Text is not set and there's no child (Qiang)
+ENH: Ticket#446 - Added TMetaTagCollection.getMetaTagByID method (Qiang)
 CHG: Ticket#437 - __autoload is replaced by spl_autoload_register (Qiang)
-CHG: constructUrl() now encodes & into &amp; by default (Qiang)
+CHG: Ticket#454 - Redundant PHP Version Check
 CHG: TRepeater does not render <span> anymore for empty item template (Qiang)
+CHG: THttpRequest.constructUrl() now encodes ampersand by default (Qiang)
 
 Version 3.0.5 October 23, 2006
 ==============================
